--- a/themes/fumparfum/_dev/css/components/search-widget.scss
+++ b/themes/fumparfum/_dev/css/components/search-widget.scss
@@ -49,8 +49,8 @@
     }
   }
 }
-@include media-breakpoint-up(md) {
-  .search-widget {
-    min-width: 15.63rem;
-  }
-}
+//@include media-breakpoint-up(md) {
+//  .search-widget {
+//    min-width: 15.63rem;
+//  }
+//}
