--- a/themes/fumparfum/_dev/css/components/products.scss
+++ b/themes/fumparfum/_dev/css/components/products.scss
@@ -98,10 +98,14 @@
         .material-icons {
             line-height: inherit;
         }
-        &:hover {
-            background-color: $gray-lighter;
-            color: white;
-        }
+        &:not(.disabled),
+        &:not(:disabled) {
+            &:hover {
+                background-color: $brand-primary;
+                color: $gray;
+                border-color: transparent;
+            }
+        }        
     }
 }
 
