--- a/themes/fumparfum/_dev/css/partials/_commons.scss
+++ b/themes/fumparfum/_dev/css/partials/_commons.scss
@@ -92,12 +92,12 @@ h6 {font-family: 'Roboto', sans-serif;
 
 .h4 {
     font-weight: $headings-font-weight;
-    color: $gray-darker;
+    color: $gray-light;
 }
 
 .btn-primary,
 .btn-secondary {
-    background-color: white;
+    background-color: $brand-primary;
     color: $gray;
     border-color: transparent;
     @include box-shadow-light;
@@ -106,18 +106,25 @@ h6 {font-family: 'Roboto', sans-serif;
     padding: 0.5rem 1.25rem;
     border-radius: 0;
     transition: all .5s;
+    &.btn-lg {
+        padding: .5rem 15%;
+        font-size: .875rem;
+        @media (max-width: 767px) {
+            width: 100%;
+        }
+    }
     &:hover,
     &:focus,
     &:active {
-        background-color: $gray;
+        background-color: $gray-lighter;
         color: white;
         box-shadow: none;
         border-color: transparent;
     }
-    &:not(:disabled) {        
+    &:not(:disabled) {
         &:not(.disabled) {
             &:active {
-                background-color: $gray;
+                background-color: $gray-lighter;
                 color: white;
                 box-shadow: none;
                 border-color: transparent;
@@ -125,6 +132,18 @@ h6 {font-family: 'Roboto', sans-serif;
                     box-shadow: 0 0 0 0.2rem rgba(255,255,255,.5);
                 }
             }
+        }
+    }
+    .disabled,
+    &:disabled {
+        opacity: .8;
+        background-color: $brand-primary;
+        color: $gray;
+        border-color: transparent;        
+        &:hover {
+            background-color: $brand-primary;
+            color: $gray;
+            border-color: transparent;
         }
     }
     .material-icons {
@@ -194,12 +213,13 @@ small.value {
     padding: 0.5rem 1.5rem;
     font-size: .75rem;
     &:focus {
-        background-color: none;
+        background-color: transparent;
         outline: 0.1rem solid $brand-primary;
         color: $gray-light;
         border-color: white;
         box-shadow: none;
     }
+    &:disabled {background-color: transparent;}
 }
 
 .input-group {
@@ -211,6 +231,7 @@ small.value {
     }
     .input-group-btn {
         height: 100%;
+            padding: 1px;
         > .btn {
             border: 0;
             box-shadow: none;
@@ -218,7 +239,7 @@ small.value {
             font-size: 0.6875rem;
             font-weight: normal;
             margin-left: 0;
-            padding: 0.625rem 1rem;
+            padding: 0.625rem 1.5rem;
             text-transform: uppercase;
             &[data-action="show-password"] {
                 background: $gray-lighter;
@@ -262,9 +283,10 @@ textarea {
     height: 2.625rem;
     -moz-appearance: none;
     -webkit-appearance: none;
-    background: $gray-light url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>') no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
+    background: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>') no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
 //    background: $gray-light url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAPklEQVR4Ae3TwREAEBQD0V/6do4SXPZg7EsBhsQ8IEmSMOsiuEfg3gL3oXC7wK0bd1G4o8X9F4yIkyQfSrIByQBjp7QuND8AAAAASUVORK5CYII=") no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
     padding: 0 0.5rem;
+    border: 1px solid $gray-light;
 
 }
 
@@ -273,9 +295,9 @@ textarea {
 }
 
 .form-control-comment {
-    font-size: 0.875rem;
+    font-size: 0.675rem;
     padding-top: 0.5rem;
-    color: $gray;
+    color: $gray-light;
 }
 
 .form-control-submit {
@@ -310,7 +332,7 @@ input:focus {
         margin: 0;
     }
     .btn-default {
-        background: $brand-primary;
+        background: $gray-lighter;
         color: white;
         text-transform: uppercase;
         border-radius: 0;
@@ -318,7 +340,10 @@ input:focus {
         padding: 0.5rem 1rem;
     }
 }
-
+.bootstrap-filestyle  {
+    border: 1px solid $gray-light;
+    .form-control {border: none;}
+}
 .bootstrap-touchspin {
     width: auto;
     float: left;
