--- a/themes/fumparfum/_dev/css/components/categories.scss
+++ b/themes/fumparfum/_dev/css/components/categories.scss
@@ -1,5 +1,5 @@
 #products {
-  color: $gray;
+  color: $brand-primary;
   .products-select {
     display: flex;
     align-items: baseline;
@@ -23,7 +23,7 @@
         background-color: transparent;
         box-shadow: none;
         border: none;
-        border-bottom: 1px solid $gray-light;
+        border-bottom: 1px solid $brand-primary;
     }
     h1 {
         text-align: center;
@@ -33,7 +33,7 @@
     p,
     strong {
       font-weight: 400;
-      color: white;
+      color: $brand-primary;
     }
     p {
       color: $gray-darker;
@@ -57,13 +57,15 @@
   .sort-by-row {
     display: flex;
     align-items: center;
+      justify-content: flex-end;
   }
   .sort-by {
     white-space: normal;
     word-break: break-word;
     margin-right: -0.9375rem;
     margin-left: 0.9375rem;
-    text-align: right
+    text-align: right;
+          font-size: .75rem;
   }
   .total-products {
     padding-top: 0.625rem;
@@ -73,24 +75,24 @@
   }
 }
 .products-sort-order {
-  color: $gray;
+  color: $brand-primary;
   .select-title {
     display: inline-block;
     width: 100%;
-    color: $gray-darker;
-    background: white;
+    color: $brand-primary;
+    background: none;
     padding: $small-space;
     cursor: pointer;
-    border: $input-btn-border-width solid $input-border-color;
-    @include box-shadow-light;
+    border: $input-btn-border-width solid $gray-light;
+//    @include box-shadow-light;
   }
   .select-list {
     display: block;
-    color: $gray-darker;
+    color: $brand-primary;
     padding: $small-space $medium-space;
     &:hover {
-      background: $brand-primary;
-      color: white;
+      background: $gray;
+      color: $brand-primary;;
       text-decoration: none;
     }
   }
@@ -138,8 +140,8 @@
     background: $gray-lighter;
     padding: $small-space $medium-space;
     &:hover {
-      background: $brand-primary;
-      color: white;
+      background: $gray;
+      color: $brand-primary;;
       text-decoration: none;
     }
   }
@@ -158,7 +160,7 @@
 #search_filters_suppliers {
   @include box-shadow;
   margin-bottom: 1.563rem;
-  background: white;
+  background: gray;
   padding: 1.563rem 1.25rem;
   .facet {
     .collapse {
@@ -190,20 +192,23 @@
 }
 .pagination {
   width: 100%;
+    border-top: 1px solid $brand-primary;
+    padding-top: 1rem;
+    font-size: .75rem;
   > div:first-child{
     line-height: 2.5rem;
   }
   .page-list {
-    background: white;
-    padding: 0.375rem;
+    background: none;
+//    padding: 0.375rem;
     margin-bottom: 0;
-    @include box-shadow-light;
+//    @include box-shadow-light;
     li {
       display: inline;
     }
   }
   a {
-    color: black;
+    color: $gray-light;
     font-weight: 600;
     &:not(.previous):not(.next) {
       letter-spacing: 0.125rem;
@@ -241,7 +246,7 @@
     color: $gray-darker;
     margin-right: $small-space;
     margin-bottom: $small-space;
-    background: white;
+    background: $gray;
     padding: 0.625rem;
     display: inline-block;
     font-size: $font-size-xs;
@@ -256,7 +261,7 @@
 }
 .block-categories {
   @include box-shadow;
-  background: white;
+  background: $gray;
   padding: 1.563rem 1.25rem;
   margin-bottom: 1.563rem;
   .category-sub-menu {
