--- a/themes/fumparfum/_dev/css/components/custom-text.scss
+++ b/themes/fumparfum/_dev/css/components/custom-text.scss
@@ -41,6 +41,30 @@
     .page-header {
         h1 {
             text-align: center;
+            margin-bottom: 3rem;
+        }
+    }
+    .cms-sub-pages {
+        width: 100%;
+        display: block;
+        min-height: 15.8rem;
+        background-repeat: no-repeat;
+        position: relative;
+        transform: scale(.9);
+        transition: all .5s;
+        background-size: cover;
+        span {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 0;            
+            padding: 1rem;
+            display: block;
+            background-color: rgba(0,0,0,.5);
+        }
+        &:hover {
+            transform: scale(1);
+            color: $brand-primary;
         }
     }
 }
@@ -54,3 +78,5 @@
         h2 {font-size: 2.5rem;}
     }
 }
+
+
